Adjust header height to avoid clipping descenders.

--- a/app/assets/stylesheets/components/masthead.css.scss
+++ b/app/assets/stylesheets/components/masthead.css.scss
@@ -171,6 +171,7 @@
   @include font-size(22);
   @include truncate;
   color: $link-color;
+  height: 25px;
   float: left;
   font-weight: 500;
   width: auto;
